--- a/app/views/ugc/api/gotoTaobao.scala.html
+++ b/app/views/ugc/api/gotoTaobao.scala.html
@@ -5,6 +5,68 @@ nav="index",
 title = "宝贝搜索结果_食美特，爱美食爱生活"
 )(css="/assets/css/template/go.css") {
 <div class="container" id="index">
+    <div class="intro"></div>
+    <div class="product-main clearfix">
+
+        <div class="main">
+            <!-- pic show-->
+            <div class="gallery">
+                <div class="pic-box">
+                    <a class="pic-link" href="/ugc/api/convertProduct/16187799748" target="_blank" rel="nofollow">
+                        <img id="J_PicCover" src="http://img04.taobaocdn.com/bao/uploaded/i4/908167809/T2KS0nXX4OXXXXXXXX_!!908167809.jpg" alt="曼诺普 学生午睡枕趴睡枕趴趴枕 办公室午睡枕午休枕记忆枕头包邮">
+                    </a>
+                </div>
+
+            </div>
+            <!--pic show end-->
+
+
+
+        </div>
+        <!-- aside begin -->
+        <div class="side">
+
+
+
+            <div class="buy-info">
+                <div class="buy-box">
+                    <div class="clearfix" id="J_BuyBox">
+                        <h3 class="title"> 五一特价结婚庆用品回礼小礼品礼物盒包装创意迷你小香皂促销批发</h3>
+                        <div class="intro"><p>可爱迷你小香皂</p></div>
+
+
+                        <div class="buy-btn clearfix">
+                            <a class="op-btn clearfix" href="/ugc/api/convertProduct/15846376694" target="_blank" rel="nofollow">
+
+
+
+                                <span class="current-price"> ¥1.43 </span>
+                                <span class="original-price"> ¥1.50 </span>
+
+
+
+                                <span class="have-look">去看看 &gt;</span>
+                            </a>
+                        </div>
+
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+
+
+
+        </div>
+        <!-- aside end -->
+
+    </div>
+    <div class="warning">
+
+    </div>
 
 
 </div>
@@ -13,6 +75,8 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
 
 }{
 <script type="text/javascript">
-
+    seajs.use('app/init', function (init) {
+    //    init.load("app/infos")
+    });
 </script>
 }
