--- a/public/assets/css/template/goods.detail.css
+++ b/public/assets/css/template/goods.detail.css
@@ -12,25 +12,39 @@
 #container {
     width: 980px
 }
-.product-main{width:950px;margin:0 auto 25px;background:#fff;padding:15px 15px 5px 15px;+padding:15px;_padding:15px 15px 5px 15px;}
-.main {width:500px;float:left; background-color:#f5f5f5}
+
+.product-main {
+    width: 950px;
+    margin: 0 auto 25px;
+    background: #fff;
+    padding: 15px 15px 5px 15px;
++ padding : 15 px;
+    _padding: 15px 15px 5px 15px;
+}
+
+.main {
+    width:470px;
+    float: left;
+    background-color: #f5f5f5
+}
+
 .gallery {
-    width: 470px;
-    padding: 15px;
+    width: 460px;
+    padding:5px;
     border-bottom: 1px dotted #eee;
     float: left
 }
 
 .gallery .pic-box {
-    width: 470px;
-    height: 470px;
+    width: 460px;
+    height: 460px;
     overflow: hidden;
     position: relative
 }
 
 .gallery .pic-box .pic-link {
-    width: 470px;
-    height: 470px;
+    width: 460px;
+    height: 460px;
     display: table-cell;
     *display: block;
     vertical-align: middle;
@@ -41,7 +55,7 @@
 }
 
 .gallery .pic-box img {
-    max-width: 470px;
+    max-width: 460px;
     vertical-align: middle
 }
 
@@ -103,50 +117,21 @@
     border-color: #5ad
 }
 
-.thumb a.thumb-nav-prev, .thumb a.thumb-nav-next {
-    overflow: hidden;
-    width: 21px;
-    height: 64px;
-    background-image: url(images/arrow-top.png);
-    background-repeat: no-repeat;
-    opacity: .8;
-    filter: alpha(opacity = 80);
-    visibility: hidden
-}
-
-.thumb a.thumb-nav-prev:hover, .thumb a.thumb-nav-next:hover {
-    opacity: 1;
-    filter: alpha(opacity = 100)
-}
-
-.thumb a.thumb-nav-prev {
-    float: left;
-    background-position: 0 0
-}
-
-.thumb a.thumb-nav-next {
-    float: right;
-    background-position: -29px 0
-}
-
-.thumb a.disable, .thumb a.disable:hover {
-    opacity: .2;
-    filter: alpha(opacity = 20);
-    cursor: default
-}
 .tags {
-    width: 470px;
+    width: 460px;
     padding: 10px 0 25px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     float: left
 }
-.tags h3{
+
+.tags h3 {
     color: #87B32E;
     font-size: 14px;
     line-height: 22px;
     height: 22px;
     padding-left: 10px;
 }
+
 .tags  .tag-wrap a {
     display: inline-block;
     height: 22px;
@@ -167,21 +152,23 @@
     color: #fff
 }
 
-.tags .more{
+.tags .more {
     float: right;
     font-size: 12px;
     color: #87B32E;
     line-height: 22px;
     margin: 0 37px 0 0;
 }
-.tags li{
+
+.tags li {
     width: 110px;
     height: 110px;
     overflow: hidden;
     float: left;
     margin: 8px 6px 0 0;
 }
-.tags li .show_img{
+
+.tags li .show_img {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -189,178 +176,152 @@
     height: 110px;
     padding: 0;
 }
+
 /*side */
 .side {
     float: right;
-    padding: 0 15px 0 20px;
-    width: 410px;
+    width: 460px;
+    position: relative;
 }
 
-.side .buy-info{
+.side .buy-info {
+    position: relative;
     margin: 0 0 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    background-color: #f5f5f5;
 }
-.side .title{
- font-size: 16px;
- font-weight: bolder;
-    padding:10px 5px;
+
+
+.side .intro  {
+    position: relative;
+    text-indent: 30px;
+    padding: 10px;
+    font: 14px/24px SimSun;
+    color: #333;
+    word-wrap: break-word;
+    word-break: break-all;
+    zoom: 1;
 }
-.side .intro p{
-    font-size: 12px;
-    line-height: 25px;
-    margin-bottom: 10px;
+.side .intro-quot {
+    position: absolute;
+    top: 8px;
+    left: 15px;
+    width: 20px;
+    height: 20px;
+background: url(images/ico-quotation.png) no-repeat
+}
+ /* user info */
+.side .first-share {
+    padding: 10px 0;
+    border-bottom: 1px solid #ddd;
+}
+
+
+.side .user-info .pic {
+    margin-right: 8px;
+}
+
+.side .user-info .info{
+    height: 30px;
+    line-height: 30px;
+}
+.side .user-info  .uname {
+    font-size: 14px;
+    color: #5AD;
+   /* color: #ff7f00;*/
+    font-weight: bold;
+    margin-right: 8px;
+}
+
+.side .user-info  .come-from {
+    color: #CCC;
+}
+
+.side .title {
+    font-size: 16px;
+    font-weight: bolder;
+    padding: 10px 0;
 }
 .side .buy-box {
-    padding: 10px;
- /*   background: url(images/buy-info.jpg) no-repeat 0 0 transparent;*/
-/*    height: 100px;*/
+    padding: 10px 0;
     position: relative;
 }
 
 .side .buy-box .buy-meta {
-    float: left;
+    margin-bottom: 15px;
     overflow: hidden
 }
-.side .buy-box .buy-meta span.meta{
-    width: 80px;
+
+
+.side .buy-box  dd {
+    font-size: 14px;
+    font-family:"微软雅黑";
+    padding: 10px;
+    color: #000;
 }
-.side .buy-box .buy-meta  li {
-    padding-bottom:5px;
-    font-size: 12px;
-    color: #999
+.side .buy-box  dd a{
+    color: #5AD;
 }
-.side .buy-box .buy-meta .price-normal {
+.side .buy-box   dd.fl{
+    width:200px;
+    height: 35px;
+    line-height: 35px;
+}
+.side .buy-box  dd span{
+    color: #e26;
+    font-weight: bold;
+}
+.side .buy-box  .price-normal {
     font-size: 14px;
     text-decoration: line-through;
     color: #555;
 }
-.side .buy-box .buy-meta .price-promotion {
+
+.side .buy-box  .price-promotion {
     font-size: 25px;
     font-weight: bolder;
-    color: #ff7f00;
-}
-
-.side .buy-box .buy-meta .recent-sales {
+    color: #e26;
 }
 
 
-.side .buy-info .operate{
+.buy-btn {
+    float:left;
+    margin-left:30px;
+    width: 100px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    font-size: 14px;
+    color: white;
+    background: #FF7F00;
+    border: 1px solid #E67300;
+    border-radius: 2px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    text-decoration: none;
+}
+
+.buy-btn2 {
+    float:right;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    font-size: 12px;
+    color:#555;
+
+
+}
+
+.side .buy-info .operate {
     padding: 10px;
     background: #FFFDF7;
-    border-top: 1px solid #e1e1e1;
     border-radius: 0 0 5px 5px;
 }
-.side .buy-info .info-wrong{
+
+.side .buy-info .info-wrong {
     float: left;
-}
-
-.side .first_share{
-   padding: 20px 0;
-    border-bottom: 1px dotted #ededed;
-}
-.side .first_share .title{
-    font-size: 14px;
-    color: #444;
-    font-weight: bold;
-}
-.side .first_share .title span{
-     font-size: 12px;
-     color: #999;
-    font-weight: normal;
-}
-.side .first_share .title span a{
-    color:#e26;
-}
-.side .share_user_info .pic{
-    margin-right: 8px;
-}
-.side .share_user_info .content{
-    overflow: hidden;
-    zoom: 1;
-    min-height: 50px;
-    _height: 50px;
-}
-.side .share_user_info .content .uname {
-    font-size: 14px;
-    color: #ff7f00;
-    font-weight: bold;
-    margin-right: 8px;
-}
-.side .share_user_info .share_content {
-    color: #666;
-    line-height: 25px;
-    margin-top: 5px;
-}
-.side .share_user_info  .come_from {
-    color: #CCC;
-    margin-left: 10px;
-}
-.buy-btn {
-    margin-top: 15px;
-    padding-bottom: 20px;
-    border-bottom: 1px solid #f3f3f3
-}
-
-.buy-btn .op-btn {
-    float: right;
-    overflow-y: hidden;
-    height: 52px;
-    line-height: 52px;
-    padding-left: 35px;
-    font-size: 0;
-    background: url(images/bg-btn.png) no-repeat 0 0
-}
-
-.buy-btn .have-look {
-    overflow: hidden;
-    float: left;
-    cursor: pointer;
-    height: 52px;
-    font: 14px/52px SimSun;
-    color: #fff;
-    padding: 0 10px 0 30px;
-    background: url(images/bg-btn.png) no-repeat 100% 0
-}
-
-.buy-btn .op-btn:hover {
-    background-position: 0 -61px
-}
-
-.buy-btn .op-btn:hover .have-look {
-    background-position: 100% -61px
-}
-
-.buy-btn .op-btn:focus {
-    background-position: 0 -126px
-}
-
-.buy-btn .op-btn:focus .have-look {
-    background-position: 100% -126px
-}
-
-.buy-btn .current-price {
-    float: left;
-    cursor: pointer;
-    font: bold 24px/52px "Microsoft YaHei";
-    color: #fff
-}
-
-.buy-btn .original-price {
-    float: left;
-    cursor: pointer;
-    text-indent: 15px;
-    height: 52px;
-    font: bold 14px/52px Arial;
-    color: #fff;
-    text-decoration: line-through
 }
 
 /* comment */
-.comment-list{
+.comment-list {
     margin-top: 30px;
 }
 
@@ -387,7 +348,7 @@
 
 .comment .cmt .cmt-doc {
     float: right;
-    width:330px
+    width: 330px
 }
 
 .comment .cmt-doc .cmt-info {
@@ -430,7 +391,7 @@
     width: 300px;
     height: 80px;
     line-height: 18px;
-    padding:0;
+    padding: 0;
     border: 1px solid #ddd
 }
 
@@ -532,7 +493,6 @@
     width: 330px;
     padding: 6px 8px;
 }
-
 
 .comment-publish #J_HiddenForm {
     line-height: 28px
@@ -739,7 +699,8 @@
 #product-like .goods-wall {
     margin-top: 5px
 }
-#product-like .morefind{
+
+#product-like .morefind {
     margin-left: 250px;
 }
 
