remove user stats into another class UserStatic

--- a/app/views/forums/forum.scala.html
+++ b/app/views/forums/forum.scala.html
@@ -204,7 +204,7 @@ title = "讨论吧_广场_食美特，爱美食爱生活"
                     <a class="g-daren" href="@controllers.users.routes.Users.home(u.id.get)" target="_blank" title="@u.name"><em class="ofh">@u.name</em>
                         @if(u.status==3){<i class="i-daren">达人</i>}
                     </a>
-                    <span>发帖:@u.postTopicNum/ 关注:@u.loveTopicNum</span>
+                    <span>集分宝:@u.credits/ 食豆:@u.shiDou</span>
                 </li>
                 }
 
