--- a/app/views/themes/view.scala.html
+++ b/app/views/themes/view.scala.html
@@ -164,7 +164,7 @@ description =  theme.intro.getOrElse("食美特，爱美食爱生活")
                     <div class="txt-title clearfix">
                         <a href="@controllers.users.routes.Users.home(author.id.get)" target="_blank"><em class="ofh inlineblock">@author.name</em></a> &nbsp;创建
                     </div>
-                    <p>宝贝(@(author.loveBaobeiNum+author.postBaobeiNum))&nbsp;/&nbsp;主题(@(author.loveThemeNum+author.postThemeNum))</p>
+                    <p>集分宝(@(author.credits))&nbsp;/&nbsp;食豆(@(author.shiDou))</p>
                 </div>
             </div>
         </div>
