--- a/app/views/users/follow.scala.html
+++ b/app/views/users/follow.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User,page:Page[models.user.User],users:List[models.user.User])
+@(user:Option[models.user.User],author:models.user.User,page:Page[models.user.User],users:List[models.user.User],authorStatic:models.user.UserStatic)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -12,11 +12,11 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 </a>
             </li>
             <li><a href="@controllers.users.routes.Users.trend(author.id.get)">N+<br>集分宝</a></li>
-            <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(author.postBaobeiNum+author.loveBaobeiNum)<br>宝贝</a></li>
-            <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(author.postThemeNum+author.loveThemeNum)<br>主题</a></li>
-            <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(author.postTopicNum+author.loveTopicNum)<br>讨论</a></li>
-            <li><a href="@controllers.users.routes.Users.fans(author.id.get)">@author.fansNum<br>粉丝</a></li>
-            <li class=" cur last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(author.followNum)<br>我关注的</a></li>
+            <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
+            <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
+            <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
+            <li><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+            <li class=" cur last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
           <!--  <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
         </ul>
     </div>
@@ -26,7 +26,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             <div class="main box-shadow plr15">
             <div class="main-title clearfix">
                 <h2>
-                   @if(!user.isEmpty && user.get.id.get==author.id.get){我}else{Ta}已关注(@author.followNum)人
+                   @if(!user.isEmpty && user.get.id.get==author.id.get){我}else{Ta}已关注(@authorStatic.followNum)人
                 </h2>
 
             </div>
@@ -49,7 +49,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                         </p>
                         }else {
                         <p class="user-data">
-                            关注 @user.followNum<span class="mr10">,</span>粉丝 @user.fansNum<span class="mr10">,</span>动态 @user.trendNum
+                            @user.credits 个集分宝<span class="mr10">,</span>@user.shiDou 个食豆
                         </p>
                         }
                     </div>
