--- a/app/views/users/trend.scala.html
+++ b/app/views/users/trend.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User)
+@(user:Option[models.user.User],author:models.user.User,authorStatic:models.user.UserStatic)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -11,14 +11,14 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                             <img src="@author.pic" alt="@author">@author.name
                         </a>
                     </li>
-                    <li><a href="@controllers.users.routes.Users.credits(author.id.get)">N+<br>集分宝</a></li>
-                    <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(author.postBaobeiNum+author.loveBaobeiNum)<br>宝贝</a></li>
-                    <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(author.postThemeNum+author.loveThemeNum)<br>主题</a></li>
-                    <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(author.postTopicNum+author.loveTopicNum)<br>讨论</a></li>
-                    <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@author.fansNum<br>粉丝</a></li>
-                    <li class="last" ><a href="@controllers.users.routes.Users.follow(author.id.get)">@(author.followNum)<br>我关注的</a></li>
-                   <!-- <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>
-                </ul>-->
+                    <li class="cur"><a href="@controllers.users.routes.Users.credits(author.id.get)">N+<br>集分宝</a></li>
+                    <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
+                    <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
+                    <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
+                    <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+                    <li class="last" ><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
+                    <!-- <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>
+                 </ul>-->
             </div>
             <!--nav  end -->
             <div class="user-bd clearfix">
