--- a/app/views/themes/board.scala.html
+++ b/app/views/themes/board.scala.html
@@ -210,7 +210,7 @@ description = theme.intro.get
                 <div class="txt-title clearfix">
                     <a href="@controllers.users.routes.Users.home(author.id.get)" target="_blank"><em class="ofh inlineblock">@author.name</em></a> &nbsp;创建
                 </div>
-                <p>宝贝(@(author.loveBaobeiNum+author.postBaobeiNum))&nbsp;/&nbsp;主题(@(author.loveThemeNum+author.postThemeNum))</p>
+                <p>集分宝(@(author.credits))&nbsp;/&nbsp;食豆(@(author.shiDou))</p>
             </div>
         </div>
     </div>
