--- a/app/views/users/baobei.scala.html
+++ b/app/views/users/baobei.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User,page:models.Page[models.goods.Goods],t:String)
+@(user:Option[models.user.User],author:models.user.User,page:models.Page[models.goods.Goods],t:String,authorStatic:models.user.UserStatic)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -12,11 +12,11 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 </a>
             </li>
             <li><a href="@controllers.users.routes.Users.credits(author.id.get)">N+<br>集分宝</a></li>
-            <li class="cur"><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(author.postBaobeiNum+author.loveBaobeiNum)<br>宝贝</a></li>
-            <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(author.postThemeNum+author.loveThemeNum)<br>主题</a></li>
-            <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(author.postTopicNum+author.loveTopicNum)<br>讨论</a></li>
-            <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@author.fansNum<br>粉丝</a></li>
-            <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(author.followNum)<br>我关注的</a></li>
+            <li class="cur"><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
+            <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
+            <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
+            <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+            <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
           <!--  <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
         </ul>
     </div>
@@ -27,9 +27,9 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 <div class="main-title clearfix">
                     <h2>
 
-                        @if(t=="love"){ @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}喜欢的(@author.loveBaobeiNum)    } else {<a href='@controllers.users.routes.Users.baobei(author.id.get,"love",1)'>  @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}喜欢的(@author.loveBaobeiNum)  </a> }
+                        @if(t=="love"){ @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}喜欢的(@authorStatic.loveBaobeiNum)    } else {<a href='@controllers.users.routes.Users.baobei(author.id.get,"love",1)'>  @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}喜欢的(@authorStatic.loveBaobeiNum)  </a> }
                         <span class="ml5 mr5">|</span>
-                        @if(t=="share"){ @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}分享的(@author.postBaobeiNum)    } else {<a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)'>  @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}分享的(@author.postBaobeiNum)  </a> }
+                        @if(t=="share"){ @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}分享的(@authorStatic.postBaobeiNum)    } else {<a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)'>  @if(!user.isEmpty && user.get.id==author.id){我}else{Ta}分享的(@authorStatic.postBaobeiNum)  </a> }
                     </h2>
 										<span class="fr">
 					<a rel="shareGoods" class="bbl-btn ml10" href="javascript:;">+ 分享宝贝</a>
