--- a/app/views/users/fans.scala.html
+++ b/app/views/users/fans.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User,page:Page[models.user.User],users:List[models.user.User])
+@(user:Option[models.user.User],author:models.user.User,page:Page[models.user.User],users:List[models.user.User],authorStatic:models.user.UserStatic)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -12,11 +12,11 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                         </a>
                     </li>
                     <li><a href="@controllers.users.routes.Users.credits(author.id.get)">N+<br>集分宝</a></li>
-                    <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(author.postBaobeiNum+author.loveBaobeiNum)<br>宝贝</a></li>
-                    <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(author.postThemeNum+author.loveThemeNum)<br>主题</a></li>
-                    <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(author.postTopicNum+author.loveTopicNum)<br>讨论</a></li>
-                    <li class="cur" ><a href="@controllers.users.routes.Users.fans(author.id.get)">@author.fansNum<br>粉丝</a></li>
-                    <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(author.followNum)<br>我关注的</a></li>
+                    <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
+                    <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
+                    <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
+                    <li class="cur" ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+                    <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
                    <!-- <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
                 </ul>
             </div>
@@ -24,7 +24,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
             <div class="user-bd clearfix">
                 <div class="user-main">
                     <div class="fans-list box-shadow">
-                        <div class="fans-search">已有&nbsp;@author.fansNum &nbsp;人关注了你</div>
+                        <div class="fans-search">已有&nbsp;@authorStatic.fansNum &nbsp;人关注了你</div>
                         @for(user<-page.items){
                         <div class="section clearfix">
                             <div class="user-pic">
@@ -42,7 +42,7 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                                 </p>
                                 }else {
                                 <p class="user-data">
-                                    关注 @user.followNum<span class="mr10">,</span>粉丝 @user.fansNum<span class="mr10">,</span>动态 @user.trendNum
+                                    @user.credits 个集分宝<span class="mr10">,</span> 食豆： @user.shiDou
                                 </p>
                                  }
                             </div>
