--- a/app/views/users/home.scala.html
+++ b/app/views/users/home.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User],author:models.user.User,goodses:models.Page[models.goods.Goods],page:Page[((Long, String, String,Int),List[Option[String]])],users:Page[models.user.User])
+@(user:Option[models.user.User],author:models.user.User,goodses:models.Page[models.goods.Goods],page:Page[((Long, String, String,Int),List[Option[String]])],users:Page[models.user.User],authorStatic:models.user.UserStatic)
 @views.html.template(
 user,
 title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生活"
@@ -8,11 +8,11 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
     <ul class="clearfix">
         <li class="cur user bigfs"> <a href="@controllers.users.routes.Users.home(author.id.get)"><img src="@author.pic" alt="@author.name">@author.name </a></li>
         <li><a href="@controllers.users.routes.Users.credits(author.id.get)">N+<br>集分宝</a></li>
-        <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(author.postBaobeiNum+author.loveBaobeiNum)<br>宝贝</a></li>
-        <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(author.postThemeNum+author.loveThemeNum)<br>主题</a></li>
-        <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(author.postTopicNum+author.loveTopicNum)<br>讨论</a></li>
-        <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@author.fansNum<br>粉丝</a></li>
-        <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(author.followNum)<br>我关注的</a></li>
+        <li><a href="@controllers.users.routes.Users.baobei(author.id.get)">@(authorStatic.postBaobeiNum+authorStatic.loveBaobeiNum)<br>宝贝</a></li>
+        <li><a href="@controllers.users.routes.Users.theme(author.id.get)">@(authorStatic.postThemeNum+authorStatic.loveThemeNum)<br>主题</a></li>
+        <li><a href="@controllers.users.routes.Users.square(author.id.get)">@(authorStatic.postTopicNum+authorStatic.loveTopicNum)<br>讨论</a></li>
+        <li ><a href="@controllers.users.routes.Users.fans(author.id.get)">@authorStatic.fansNum<br>粉丝</a></li>
+        <li class="last"><a href="@controllers.users.routes.Users.follow(author.id.get)">@(authorStatic.followNum)<br>我关注的</a></li>
        <!--  <li class="last"><a href="@controllers.users.routes.Users.appraisal(author.id.get)">N+<br>求鉴定</a></li>-->
     </ul>
 </div>
@@ -52,8 +52,8 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 最近喜欢的宝贝
             </h2>
             <span class="fl ml5 mr5">|</span>
-            <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fl">分享的宝贝(@author.postBaobeiNum)</a>
-            <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fr">查看全部@(author.loveBaobeiNum+author.postBaobeiNum)件宝贝&gt;</a>
+            <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fl">分享的宝贝(@authorStatic.postBaobeiNum)</a>
+            <a href='@controllers.users.routes.Users.baobei(author.id.get,"share",1)' class="fr">查看全部@(authorStatic.loveBaobeiNum+authorStatic.postBaobeiNum)件宝贝&gt;</a>
         </div>
         <ul class="baobei clearfix">
             @for((goods,i)<-goodses.items.view.zipWithIndex){
@@ -91,8 +91,8 @@ title =  author.name+" 在食美特的个人主页，食美特，爱美食爱生
                 最近喜欢的主题
             </h2>
             <span class="fl ml5 mr5">|</span>
-            <a href='@controllers.users.routes.Users.theme(author.id.get,"my",1)' class="fl">创作的主题(@author.postThemeNum)</a>
-            <a href='@controllers.users.routes.Users.theme(author.id.get,"love",1)' class="fr">查看全部@(author.postThemeNum+author.loveThemeNum)个主题</a>
+            <a href='@controllers.users.routes.Users.theme(author.id.get,"my",1)' class="fl">创作的主题(@authorStatic.postThemeNum)</a>
+            <a href='@controllers.users.routes.Users.theme(author.id.get,"love",1)' class="fr">查看全部@(authorStatic.postThemeNum+authorStatic.loveThemeNum)个主题</a>
         </div>
         <div class="topic-list clearfix">
 
